Week 8 video @ youtube

--- a/index.html
+++ b/index.html
@@ -390,12 +390,33 @@
                          GMM & EM
                       </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="https://youtu.be/JZj3xw4E3v0" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fa fa-camera"></i>
-                         Video
+                         Video(Ensemble)
                       </button>
                     </a>
+                      <a href="https://youtu.be/xAOD7lRVCsc" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video(EM)
+                      </button>
+                    </a>
+                    </a>
+                      <a href="https://youtu.be/tTIqyhr9D0s" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video(EM)
+                      </button>
+                    </a>
+                    </a>
+                      <a href="https://youtu.be/63Fm20c-o6Q" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video(HW4&Final)
+                      </button>
+                    </a>
+                         	
                   </p>
                 </div>
               </li>
