--- a/index.html
+++ b/index.html
@@ -436,6 +436,12 @@
                          Video
                       </button>
                     </a>
+                    <a href="https://drive.google.com/drive/folders/1Hxbl5dm_IJoUsd3MKRqxW7M7lK23Whzz?usp=sharing" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-cloud-download"></i>
+                         Past exam
+                      </button>
+                    </a>
                   </p>
                 </div>
               </li>
