--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                          Semi-supervised learning
                       </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="https://www.youtube.com/playlist?list=PLxk9aIYXCa9eqrURcrf2g9fwunbuR_iGj" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fa fa-camera"></i>
                          Video
@@ -440,6 +440,12 @@
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fa fa-cloud-download"></i>
                          Past exam
+                      </button>
+                    </a>
+                    <a href="https://docs.google.com/presentation/d/1V4vivt0tp3ox1_bxEPjdxcYzcqGjGklJPEu6B82dI00/edit?usp=sharing" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-file-pdf"></i>
+                         TWCC Tutorial
                       </button>
                     </a>
                   </p>
