--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                   <h5 class="text-left"> Weeok 10 </h5>
                   <hr />
                   <p class="text-right">
-                    <a href="https://drive.google.com/drive/folders/1hPfbIwyuzmwl-euOmQlhU7eVoWF2j_8k?usp=sharing">
+                    <a href="https://drive.google.com/drive/folders/1hPfbIwyuzmwl-euOmQlhU7eVoWF2j_8k?usp=sharing" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          SVM & VAE
