--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                          SVM & VAE
                       </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="https://youtube.com/playlist?list=PLxk9aIYXCa9cmry4lSxSKLrEoab2i54dV" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fa fa-camera"></i>
                          Video
