--- a/index.html
+++ b/index.html
@@ -471,6 +471,26 @@
                   </p>
                 </div>
               </li>
+              <li class="list-group-item" id="week12">
+                <div class="w-100 justify-content-between">
+                  <h5 class="text-left"> Weeok 12 </h5>
+                  <hr />
+                  <p class="text-right">
+                    <a href="https://drive.google.com/drive/folders/1hPfbIwyuzmwl-euOmQlhU7eVoWF2j_8k?usp=sharing" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         SVM & VAE
+                      </button>
+                    </a>
+                    <a href="" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video
+                      </button>
+                    </a>
+                  </p>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
