--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <ul class="list-group">
               <li class="list-group-item" id="week01">
                 <div class="w-100 justify-content-between">
-                  <h5 class="text-left"> Weeok 01 </h5>
+                  <h5 class="text-left"> Week 01 </h5>
                   <hr />
                   <!-- <div class="collapse" id="hw1">
                     <p class="text-justify"> PM 2.5 預測 - Coming Soon </p>
@@ -182,7 +182,7 @@
               </li>
               <li class="list-group-item" id="week02">
                 <div class="w-100 justify-content-between">
-                  <h5 class="text-left"> Weeok 02 </h5>
+                  <h5 class="text-left"> Week 02 </h5>
                   <hr />
                   <!-- <div class="collapse" id="hw1">
                     <p class="text-justify"> PM 2.5 預測 - Coming Soon </p>
@@ -221,7 +221,7 @@
               </li>
               <li class="list-group-item" id="week03">
                 <div class="w-100 justify-content-between">
-                  <h5 class="text-left"> Weeok 03 </h5>
+                  <h5 class="text-left"> Week 03 </h5>
                   <hr />
                   <p class="text-right">
                     <a href="./slides/W3a_DL_introduction.pdf">
@@ -259,7 +259,7 @@
               </li>
               <li class="list-group-item" id="week04">
                 <div class="w-100 justify-content-between">
-                  <h5 class="text-left"> Weeok 04 </h5>
+                  <h5 class="text-left"> Week 04 </h5>
                   <hr />
                   <p class="text-right">
                     <a href="./slides/W4a_CNN.pdf">
@@ -285,7 +285,7 @@
               </li>
               <li class="list-group-item" id="week05">
                 <div class="w-100 justify-content-between">
-                  <h5 class="text-left"> Weeok 05 </h5>
+                  <h5 class="text-left"> Week 05 </h5>
                   <hr />
                   <p class="text-right">
                     <a href="./slides/W5a_PCA.pdf">
@@ -305,7 +305,7 @@
               </li>
               <li class="list-group-item" id="week06">
                 <div class="w-100 justify-content-between">
-                  <h5 class="text-left"> Weeok 06 </h5>
+                  <h5 class="text-left"> Week 06 </h5>
                   <hr />
                   <p class="text-right">
                     <a href="./slides/W6a_auto.pdf">
@@ -331,7 +331,7 @@
               </li>
               <li class="list-group-item" id="week07">
                 <div class="w-100 justify-content-between">
-                  <h5 class="text-left"> Weeok 07 </h5>
+                  <h5 class="text-left"> Week 07 </h5>
                   <hr />
                   <p class="text-right">
                     <a href="./slides/W8a_RNN.pdf">
@@ -381,7 +381,7 @@
               </li>
               <li class="list-group-item" id="week08">
                 <div class="w-100 justify-content-between">
-                  <h5 class="text-left"> Weeok 08 </h5>
+                  <h5 class="text-left"> Week 08 </h5>
                   <hr />
                   <p class="text-right">
                     <a href="https://drive.google.com/file/d/1TYy_9asdVpkJfjTcyw6zPHONKbaB_af3/view?usp=sharing">
@@ -421,7 +421,7 @@
               </li>
               <li class="list-group-item" id="week09">
                 <div class="w-100 justify-content-between">
-                  <h5 class="text-left"> Weeok 09 </h5>
+                  <h5 class="text-left"> Week 09 </h5>
                   <hr />
                   <p class="text-right">
                     <a href="https://drive.google.com/file/d/1VKOoyqgXibWW9RSKjd_wdsWNJcdVakkq/view?usp=sharing">
@@ -453,7 +453,7 @@
               </li>
               <li class="list-group-item" id="week10">
                 <div class="w-100 justify-content-between">
-                  <h5 class="text-left"> Weeok 10 </h5>
+                  <h5 class="text-left"> Week 10 </h5>
                   <hr />
                   <p class="text-right">
                     <a href="https://drive.google.com/drive/folders/1hPfbIwyuzmwl-euOmQlhU7eVoWF2j_8k?usp=sharing" target="_blank">
@@ -473,7 +473,7 @@
               </li>
               <li class="list-group-item" id="week12">
                 <div class="w-100 justify-content-between">
-                  <h5 class="text-left"> Weeok 12 </h5>
+                  <h5 class="text-left"> Week 12 </h5>
                   <hr />
                   <p class="text-right">
                     <a href="https://drive.google.com/drive/folders/1tiFCWpqAo4vNbHyuPRlxOW0Ui5LO--y9?usp=sharing" target="_blank">
