--- a/index.html
+++ b/index.html
@@ -491,6 +491,46 @@
                   </p>
                 </div>
               </li>
+              <li class="list-group-item" id="week12">
+                <div class="w-100 justify-content-between">
+                  <h5 class="text-left"> Week 13 </h5>
+                  <hr />
+                  <p class="text-right">
+                    <a href="https://drive.google.com/drive/folders/1TjToJErnP8xImVkQc7MTasqXg9ZF4mal?usp=sharing" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         SVM & Duality
+                      </button>
+                    </a>
+                    <a href="" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video
+                      </button>
+                    </a>
+                  </p>
+                </div>
+              </li>
+              <li class="list-group-item" id="week12">
+                <div class="w-100 justify-content-between">
+                  <h5 class="text-left"> Week 14 </h5>
+                  <hr />
+                  <p class="text-right">
+                    <a href="https://drive.google.com/drive/folders/1LeBlLIO38ey004-V8h-cQ97TlYecTa9N?usp=sharing" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         PAC
+                      </button>
+                    </a>
+                    <a href="" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video
+                      </button>
+                    </a>
+                  </p>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
