update hw5 material

--- a/index.html
+++ b/index.html
@@ -782,35 +782,35 @@
                        INFO
                     </button>
                     <!-- Google Sheets -->
-                    <a href="">
+                    <a href="https://docs.google.com/presentation/d/1m9ftjCGXgRxvgtdWkhUPW3toGsOcUKdOpUzhnEwdkhI/edit#slide=id.g58c65b53a1_0_0">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Slide
                       </button>
                     </a>
                     <!-- Kaggle -->
-                    <a href="">
+                    <a href="https://www.kaggle.com/c/ml-2021fall-hw5">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Kaggle
                       </button>
                     </a>
                     <!-- Report -->
-                    <a href="">
+                    <a href="https://docs.google.com/document/d/1P-aQZ3nbVnzuvEhKNhJdX3RR46qKfypO9UuxBGa4Ttc/edit">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Report
                       </button>
                     </a>
                     <!-- HackMD -->
-                    <a href="">
+                    <a href="https://hackmd.io/@g4HRMJCzQL2hzLedRcbVPQ/SyCBoc1qt">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="far fa-file-pdf"></i>
                          Math
                       </button>
                     </a>
                     <!-- ipyth on Github -->
-                    <a href="">
+                    <a href="https://drive.google.com/file/d/1iGWE9Lx46gM3-Xm3837KYzw1EojwM9Mc/view?usp=sharing">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fab fa-github"></i>
                          CODE
