--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                          SVM & Optimization Duality
                       </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="https://youtube.com/playlist?list=PLxk9aIYXCa9cNtQgKD1nD3xHrXGeerfPE" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fa fa-camera"></i>
                          Video
