--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                          SVM & Duality
                       </button>
                     </a>
-                    <a href="" target="_blank">
+                    <a href="https://youtube.com/playlist?list=PLxk9aIYXCa9fONwYWBwY4ArntDr7RRTKv" target="_blank">
                       <button class="btn btn-outline-secondary btn-sm">
                         <i class="fa fa-camera"></i>
                          Video
