--- a/index.html
+++ b/index.html
@@ -531,6 +531,26 @@
                   </p>
                 </div>
               </li>
+              <li class="list-group-item" id="week15">
+                <div class="w-100 justify-content-between">
+                  <h5 class="text-left"> Week 15 </h5>
+                  <hr />
+                  <p class="text-right">
+                    <a href="" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="far fa-file-pdf"></i>
+                         Guest Talk
+                      </button>
+                    </a>
+                    <a href="https://youtu.be/lwmf4YIF_s4" target="_blank">
+                      <button class="btn btn-outline-secondary btn-sm">
+                        <i class="fa fa-camera"></i>
+                         Video
+                      </button>
+                    </a>
+                  </p>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
